# emoji-keyboard

./: .editorconfig  .gitignore  .gitmodules  .prettierrc  .travis.yml  App.tsx  LICENSE  MANIFEST.in  README.md  angular.json  app.json  copyright  electron-builder.json  emoji-keyboard  emoji-keyboard.desktop  main.py  main.ts  package.json  preload.js  pyproject.toml  setup.py  stdeb.cfg  tsconfig-serve.json  tsconfig.electron.json  tsconfig.json  tslint.json  update-resources.py  vm.ffs_gui  webpack.config.js
emoji_keyboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/: emoji_data.py  emoji_gtk.py  emoji_lib.py  emoji_shared.py
lib/data/: emoji-keyboard.desktop
scripts/: copy-res.py
sources/blobmoji/: add_changes.py
sources/blobmoji/emojicompat/: README.md
sources/openmoji/: package.json
src/: context.ts  data.ts  expansion.ts  index.html  main.ts  navigation.ts  polyfills.ts  shared.ts  styles.scss  test.ts  theme.scss  theme.ts  types.ts  typings.d.ts
src-tauri/: Cargo.toml  bindgen.sh  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  uiohook.rs
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/category-tabs/: tabbar.component.scss
src/app/components/category-tabs/: tabbar.component.html  tabbar.component.scss  tabbar.component.ts
src/app/components/emoji/: emoji.component.html  emoji.component.sass  emoji.component.ts
src/app/components/palette/: emoji-palette.component.html  emoji-palette.component.sass  emoji-palette.component.ts
src/app/components/search/: search.component.html  search.component.scss  search.component.ts
src/app/components/settings/: settings.component.html  settings.component.scss  settings.component.ts
src/app/components/tabs/: tabs.component.html  tabs.component.ts
src/app/pipes/: pipes.module.ts  safe.pipe.ts
src/app/providers/: data.service.ts  electron.service.ts
src/app/search/: search.component.scss  search.component.ts
src/app/services/: data.service.ts  directory.service.ts  electron.service.ts  index.ts  messenger.service.ts  recent.service.ts  settings.service.ts
src/app/shared/: shared.module.ts
src/app/shared/components/: index.ts
src/app/shared/directives/: hotkey.directive.ts  index.ts
src/app/shared/emoji/: emoji.component.html  emoji.component.scss  emoji.component.ts
src/app/shared/palette/: palette.component.scss  palette.component.ts
src/assets/data/: categories.json  default.ini  emoji.json  skin-tones.json
src/components/: emoji.tsx  palette.tsx  recent.tsx  search.tsx
src/screens/: about.tsx  palette.tsx  settings.tsx
src_py/: output.py  server.py  service.py
(+8 files in other folders)
