[tool.poetry]
name = "emoji-keyboard"
version = "3.0.0a0"
description = "Type emoji easily! Virtual-keyboard like emoji picker with lots of features."
authors = ["Ozymandias <tomas.rav@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pycountry = "^19.8.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
