[tool.poetry]
name = "emoji-keyboard"
version = "3.0.0rc0"
description = "Type emoji easily! Virtual keyboard-like emoji palette for Linux with lots of features."
authors = ["Ozymandias <tomas.rav@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/OzymandiasTheGreat/emoji-keyboard"
keywords = ["emoji", "keyboard", "picker", "palette"]
packages = [{ include = "src_py/**/*.py" }]

[tool.poetry.dependencies]
python = "^3.6"
macpy = "^0.1.2"
klembord = "^0.2.1"

[tool.poetry.dev-dependencies]
pycountry = "^19.8.18"
shiv = "^0.1.1"
wheel = "^0.34.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
