[package]
name = "emoji_keyboard"
version = "4.0.0"
description = "Virtual keyboard like emoji palette"
authors = ["Tomas Ravinskas <tomas@tomasrav.me>"]
license = "MIT"
repository = "https://github.com/OzymandiasTheGreat/emoji-keyboard"
default-run = "emoji_keyboard"
edition = "2021"
rust-version = "1.57"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }
bindgen = "0.60.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["clipboard-all", "shell-open", "system-tray", "window-hide", "window-set-focus", "window-set-position", "window-set-skip-taskbar", "window-show"] }
once_cell = "1.14.0"
enigo = "0.0.14"
interprocess = "1.1.1"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
branch = "dev"

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "dev"}
tao = { git = "https://github.com/tauri-apps/tao", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
